--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-medium-image-zoom": "^5.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.0.14",
     "zustand": "^5.0.7"
   },
