--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "marked": "^16.1.2",
     "motion": "^12.23.12",
     "next": "15.4.5",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "prisma": "^6.13.0",
     "react": "19.1.0",
