feat: add Notion client dependencies and update TypeScript configuration to include notion page types

--- a/.env.local
+++ b/.env.local
@@ -14,3 +14,7 @@ NEXT_PUBLIC_URL=https://gekaixing.vercel.app
 
 # NEWs key
 NEXT_PUBLIC_NEWs_key=11b460066db1461f86349a6aa02d6855
+
+# notion
+NOTION_TOKEN=ntn_w9654571091J62njH5ECZ9chysNpqdIVDFcJEXyka0v9rT
+NOTION_DATABASE_ID=26023f75105380fbbe6be4841da8d3f5
