--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@notionhq/client": "^4.0.2",
     "@prisma/client": "^6.13.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -49,12 +50,15 @@
     "next": "15.4.5",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
+    "notion-client": "^7.4.3",
+    "notion-utils": "^7.4.3",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-advanced-cropper": "^0.20.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-medium-image-zoom": "^5.3.0",
+    "react-notion-x": "^7.4.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
