--- a/package.json
+++ b/package.json
@@ -47,15 +47,16 @@
     "lucide-react": "^0.536.0",
     "marked": "^16.1.2",
     "motion": "^12.23.12",
-    "next": "15.4.5",
+    "next": "^16.1.6",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "notion-client": "^7.4.3",
     "notion-utils": "^7.4.3",
     "prisma": "^6.13.0",
-    "react": "19.1.0",
+    "react": "^19.2.0",
     "react-advanced-cropper": "^0.20.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
     "react-medium-image-zoom": "^5.3.0",
     "react-notion-x": "^7.4.3",
