--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
-    "@tiptap/extension-code-block-lowlight": "^3.0.9",
-    "@tiptap/extension-color": "^3.0.9",
-    "@tiptap/extension-horizontal-rule": "^3.0.9",
-    "@tiptap/extension-image": "^3.0.9",
-    "@tiptap/extension-text-style": "^3.0.9",
-    "@tiptap/extension-typography": "^3.0.9",
-    "@tiptap/extensions": "^3.0.9",
-    "@tiptap/pm": "^3.0.9",
-    "@tiptap/react": "^3.0.9",
-    "@tiptap/starter-kit": "^3.0.9",
+    "@tiptap/extension-code-block-lowlight": "^3.19.0",
+    "@tiptap/extension-color": "^3.19.0",
+    "@tiptap/extension-horizontal-rule": "^3.19.0",
+    "@tiptap/extension-image": "^3.19.0",
+    "@tiptap/extension-text-style": "^3.19.0",
+    "@tiptap/extension-typography": "^3.19.0",
+    "@tiptap/extensions": "^3.19.0",
+    "@tiptap/pm": "^3.19.0",
+    "@tiptap/react": "^3.19.0",
+    "@tiptap/starter-kit": "^3.19.0",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -53,12 +53,13 @@
     "notion-client": "^7.4.3",
     "notion-utils": "^7.4.3",
     "prisma": "^6.13.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-advanced-cropper": "^0.20.1",
     "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
-    "react-medium-image-zoom": "^5.3.0",
+    "react-medium-image-zoom": "^5.4.0",
     "react-notion-x": "^7.4.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -69,7 +70,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
