--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@notionhq/client": "^4.0.2",
-    "@prisma/client": "^6.13.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -52,7 +53,6 @@
     "next-themes": "^0.4.6",
     "notion-client": "^7.4.3",
     "notion-utils": "^7.4.3",
-    "prisma": "^6.13.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-advanced-cropper": "^0.20.1",
@@ -76,6 +76,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "prisma": "^7.3.0",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.6",
