--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@stripe/stripe-js": "^8.7.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.95.3",
     "@tiptap/extension-code-block-lowlight": "^3.19.0",
@@ -69,6 +70,7 @@
     "react-medium-image-zoom": "^5.4.0",
     "react-notion-x": "^7.4.3",
     "sonner": "^2.0.7",
+    "stripe": "^20.3.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^4.0.14",
