--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.3.1",
+    "highlight.js": "^11.11.1",
     "input-otp": "^1.4.2",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.536.0",
@@ -67,8 +68,12 @@
     "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
     "react-medium-image-zoom": "^5.4.0",
     "react-notion-x": "^7.4.3",
+    "react-syntax-highlighter": "^16.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "stripe": "^20.3.1",
     "tailwind-merge": "^3.3.1",
